--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "start": "node index.js",
-    "format": "prettier --write *.js"
+    "format": "prettier --write *.js",
+    "dev": "nodemon index.js"
   },
   "repository": {
     "type": "git",
@@ -19,6 +20,7 @@
   },
   "homepage": "https://github.com/Pluto454523/NodeREST#readme",
   "devDependencies": {
+    "nodemon": "^2.0.20",
     "prettier": "^2.8.3"
   },
   "dependencies": {
