--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node src/index.js",
+    "start": "node src/CRUDBookNoDB.js",
     "dev": "nodemon src/CRUDBookNoDB.js",
     "format": "prettier --write *.js"
   },
