--- a/package.json
+++ b/package.json
@@ -27,6 +27,6 @@
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "sequelize": "^6.29.0",
-    "sqlite3": "^5.1.4"
+    "sqlite3": "5.0.2"
   }
 }
