--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
   "dependencies": {
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "mongoose": "^7.0.1",
     "sequelize": "^6.29.0",
     "sqlite3": "5.0.2"
   }
